--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,10 +90,12 @@ section {
     background-color: rgba(90, 134, 89, 1);
     color: white;
     padding: 1rem 0;
+    margin-top: 2rem;
 
     > div {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       gap: 1rem;
       > div {
         display: flex;
@@ -102,9 +104,21 @@ section {
         font-weight: bold;
         line-height: 2rem;
 
+        a {
+          color: white;
+        }
+
+        &.line {
+          border-left: 2px solid white;
+          padding-left: 1rem;
+          margin-left: 1rem;
+        }
+
         span {
+          margin-top: 0.25rem;
           font-size: 1rem;
           font-weight: normal;
+          line-height: 1.2rem;
         }
       }
     }
