--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,6 +103,7 @@ section {
         font-size: 2rem;
         font-weight: bold;
         line-height: 2rem;
+        min-width: 230px;
 
         a {
           color: white;
