--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,7 +82,7 @@ button {
 section {
   padding-top: 2rem;
   border-top: 1px solid rgba(0, 0, 0, 0.12);
-  background-color: rgba(90, 134, 89, 0.3);
+  //background-color: rgba(90, 134, 89, 0.3);
   margin-bottom: 0;
   padding-bottom: 0;
 
