splitting quiz into multiple options

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,12 @@ button {
   text-align: center;
 }
 
+.homepage {
+  h1 {
+    margin-top: 1rem;
+  }
+}
+
 .buttons-grid {
   display: grid;
   gap: 1rem;
