--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,7 +65,7 @@ button {
 
 .homepage {
   h1 {
-    margin-top: 1rem;
+    padding-top: 1rem;
   }
 }
 
@@ -81,6 +81,7 @@ button {
   width: 100%;
   margin-top: 1rem;
   min-height: 500px;
+  margin-bottom: 2rem;
 }
 
 .step {
@@ -120,8 +121,7 @@ section {
   &.stats {
     background-color: rgba(90, 134, 89, 1);
     color: white;
-    padding: 1rem 0;
-    margin-top: 2rem;
+    padding: 2rem 0 2rem 0;
 
     > div {
       display: flex;
@@ -203,6 +203,15 @@ footer {
 
 h2 {
   margin-bottom: 1rem;
+}
+
+.homepage {
+  background:
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url('/family.jpg') center center / cover no-repeat;
+  position: relative;
+  color: white;
+  min-height: 400px;
 }
 
 .card-grid {
