--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,11 @@ mat-progress-bar {
   margin-top: 2rem;
 }
 
+.results-step {
+  display: flex;
+  justify-content: center;
+}
+
 form {
   display: flex;
   flex-direction: column;
