--- a/src/styles.scss
+++ b/src/styles.scss
@@ -261,7 +261,10 @@ h2 {
   cursor: pointer;
   mat-card {
     max-width: 300px;
-    flex: 1 1 250px;
+    flex: 1 1 200px;
+    @media (min-width: 900px) {
+      flex: 1 1 250px;
+    }
   }
 }
 
@@ -271,6 +274,7 @@ h2 {
   gap: 1rem;
   align-items: center;
   //justify-items: center;
+  padding-bottom: 2rem;
   mat-card {
     width: 100%;
     max-width: 200px;
